Bug 348090 - Arrow Keys no longer control the game.
Summary: Arrow Keys no longer control the game.
Status: RESOLVED FIXED
Alias: None
Product: kbreakout
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Viranch Mehta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-22 04:53 UTC by Alex Fornuto
Modified: 2016-04-22 12:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: KDE Applications 16.04.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Fornuto 2015-05-22 04:53:43 UTC
Without any change on my end (that I know of) they keyboard arrow keys no longer control the paddle.

Reproducible: Always

Steps to Reproduce:
1. Open Kbreakout
2. Use arrow keys
3.Arrow keys don't control the paddle.

Actual Results:  
Nothing

Expected Results:  
The paddle moves.
Comment 1 Julian Helfferich 2016-04-22 12:54:39 UTC
Git commit d7d0968b0594d6971127c1ec836b0f77fac08274 by Julian Helfferich.
Committed on 22/04/2016 at 12:50.
Pushed by helfferich into branch 'Applications/16.04'.

Fix Keyboard Input

Since the port to QML/QtQuick the arrow keys no longer control the
movement of the bar. I have added a KeyEvent handler to the main.qml
file. I have also removed the keyboard input functions from
CanvasWidget that previously controlled the bar movement and which are
no longer called.
FIXED-IN: KDE Applications 16.04.1
REVIEW: 127622

M  +0    -55   src/canvaswidget.cpp
M  +0    -2    src/canvaswidget.h
M  +19   -0    src/qml/main.qml

http://commits.kde.org/kbreakout/d7d0968b0594d6971127c1ec836b0f77fac08274