Fix Keyboard Input

Since the port to QML/QtQuick the arrow keys no longer control the
movement of the bar. I have added a KeyEvent handler to the main.qml
file. I have also removed the keyboard input functions from
CanvasWidget that previously controlled the bar movement and which are
no longer called.

BUG: 348090
FIXED-IN: KDE Applications 16.04.1
REVIEW: 127622